syntax = "proto3";

package io.scans.srv.register;

service RegisterService {
  rpc createRegister(CreateRegisterRequest) returns (RegisterResponse);
}


service MedicalService {
    rpc createMedical(CreateMedicalRequest) returns (MedicalSuccessResponse);
    rpc getMedicals (FindMedialsRequest) returns (ListMedicalResponse);
    rpc deleteMedical (FindMedialsRequest) returns (MedicalSuccessResponse);
    rpc updateMedical (UpdateMedicalRequest) returns (MedicalSuccessResponse);
}

message CreateMedicalRequest {
    repeated MedicalInput medicals = 1;
}

message UpdateMedicalRequest {
    string id = 1;
    string name = 2;
    string value = 3;
}

message MedicalSuccessResponse {
    bool success = 1;
}

message MedicalInput {
    string name = 1;
    string value = 2;
}

message MedicalResponse {
    string id = 1;
    string name = 2;
    string value = 3;
}

message ListMedicalResponse{
    repeated MedicalResponse medicals = 1;
}

message FindMedialsRequest{
    string id = 1;
}


message Register {
    string type = 1;
    repeated Member members = 2;
    Sponsor sponsor = 3;
}

message Member {
    string firstname = 1;
    string lastname = 2;
    string dob = 3;
    string gender = 4;
    string contact = 5;
    string email = 6;
    string relationship = 7;
    string residentialAddress = 8;
    Benefit benefit = 9;
    MedicalHistory medicalHistory = 10;
}

message Sponsor {
    string name = 1;
    string relationship = 2;
    string contact = 3;
    string email = 4;
    string password = 5;
    string residentialAddress = 6;
    string postalAddress = 7;
}

message Medical {
    string id = 1;
    string name = 2;
    double value = 3;
}

message MedicalHistory {
    repeated Medical medicals = 1;
}

message Benefit {
    string benefitId = 1;
    string title = 2;
}

message CreateRegisterRequest {
  Register register = 1;
}


message RegisterResponse {
    string activiationLink = 1;
}
